deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery
  namespace: __NAMESPACE__
  labels:
    app: discovery
spec:
  selector:
    app: discovery
  ports:
    - name: http
      port: 80
      targetPort: 3000
